# MVP_underwriting

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/aliases/: abbreviations.yaml  bodies.yaml  brands.yaml  models.yaml
configs/app/: development.yaml  production.yaml  staging.yaml
configs/broker-profiles/: lucky_gas.yaml  sample-broker.yaml
configs/coverage-mapping/: pat-mapping.yaml
configs/env/: .env.example
configs/gcotiza-templates/: gcotiza_v1.yaml  standard.yaml
data/samples/: README.md  labeled_100.csv
docs/: CATALOG_WORKFLOW.md  CONFIGURATION.md  DOCUMENTATION_UPDATES.md  ENVIRONMENT_SETUP.md  README.md  api.md  development.md  user-workflow-guide.md  vehicle-codifier-workflow-guide.md
docs/api/: integration.md
docs/architecture/: system-overview.md
docs/database/: schema.md
docs/development/: ai-tool-guide.md  getting-started.md
docs/memory-bank/: README.md  architecture.md  configuration.md  context-summary.md  database.md  development-notes.md  patterns.md  recent-changes.md  services.md  troubleshooting.md
docs/services/: document-processor.md  frontend.md  smart-intake-service.md  vehicle-codifier.md
infra/pipelines/: github-actions.yml
infra/terraform/: main.tf
ops/runbooks/: deployment.md
reports/: codifier_eval.md
services/api/: Dockerfile  pyproject.toml  run_api.py
services/api/src/api/: __init__.py  deps.py  main.py  routes_codify.py  routes_email.py  routes_export.py  routes_processing.py  routes_transform.py  routes_upload.py
services/document-processor/: Dockerfile  pyproject.toml
services/document-processor/src/document_processor/: __init__.py  main.py  queue_consumer.py
services/document-processor/src/document_processor/services/: __init__.py  exporter.py  extractor.py  transformer.py  validator.py
services/smart-intake-service/: Dockerfile  requirements.txt
services/smart-intake-service/app/: __init__.py  main.py
services/smart-intake-service/app/auth/: graph_client.py
services/smart-intake-service/app/config/: settings.py
services/smart-intake-service/app/integrations/: database_client.py  vehicle_matcher.py
services/smart-intake-service/app/processors/: attachment_handler.py  email_processor.py
services/smart-intake-service/app/tasks/: celery_app.py  email_tasks.py
services/vehicle-codifier/: Dockerfile  README.md  extract_brands.py  pyproject.toml  run_service.py
services/vehicle-codifier/docs/: README.md  architecture.md
services/vehicle-codifier/src/vehicle_codifier/: __init__.py  brand_lookup.py  cache.py  cache.py.bak  candidate_filter.py  candidate_matcher.py  config.py  decision_engine.py  extractor.py  extractor.py.bak  label_builder.py  llm_validator.py  main.py  models.py  preprocessor.py  preprocessor.py.bak  service.py  service.py.bak  service_original.py  utils.py
services/vehicle-codifier/src/vehicle_codifier/application/use_cases/: match_single_vehicle.py  match_vehicle_batch.py
services/vehicle-codifier/src/vehicle_codifier/config/: settings.py
services/vehicle-codifier/src/vehicle_codifier/core/: __init__.py  processor.py  service.py
services/vehicle-codifier/src/vehicle_codifier/domain/entities/: cvegs_entry.py  match_result.py  vehicle.py
services/vehicle-codifier/src/vehicle_codifier/domain/services/: attribute_extractor.py  candidate_finder.py  scoring_engine.py  tie_breaker.py
services/vehicle-codifier/src/vehicle_codifier/domain/value_objects/: confidence_score.py  match_criteria.py  vehicle_attributes.py
services/vehicle-codifier/src/vehicle_codifier/infrastructure/: di_container.py
services/vehicle-codifier/src/vehicle_codifier/infrastructure/adapters/: data_loader_adapter.py  llm_service_adapter.py
services/vehicle-codifier/src/vehicle_codifier/infrastructure/repositories/: cvegs_repository.py
services/vehicle-codifier/src/vehicle_codifier/models/: __init__.py  response.py  vehicle.py
services/vehicle-codifier/src/vehicle_codifier/pipeline/: __init__.py  decision_engine.py  embedding_scoring.py  field_extractor.py  filtering.py  fuzzy_matching.py  llm_finalizer.py  llm_reranker.py  llm_validator.py  preprocessor.py
services/vehicle-codifier/src/vehicle_codifier/presentation/controllers/: vehicle_matching_controller.py
services/vehicle-codifier/src/vehicle_codifier/search/: __init__.py  cache.py  candidate_filter.py  candidate_matcher.py
services/vehicle-codifier/src/vehicle_codifier/services/: __init__.py  batch_processor.py  data_loader.py  llm_extractor.py  matcher.py  matching_service.py  preprocessor.py
services/vehicle-codifier/src/vehicle_codifier/utils/: __init__.py  brand_lookup.py  common.py  logging.py
services/vehicle-codifier/src/vehicle_codifier/worker/: __init__.py  main.py  matching_consumer.py  policy.py  rerank.py
services/worker-transform/: Dockerfile  pyproject.toml
services/worker-transform/src/worker_transform/: __init__.py  main.py
tests/e2e/: test_pipeline.py
tools/: README.md  build_embeddings.py  catalog_activate.py  catalog_embed.py  catalog_load.py  delete_amis_data.py  dump_json_schemas.py  eval_codifier.py  load_amis.py  load_amis_raw.py  load_excel_raw.py  search_amis.py  test_embeddings.py
ui/: Dockerfile
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: BrokerProfileManager.tsx  Claveteador.tsx  Dashboard.tsx  DashboardTable.tsx  ExcelExport.tsx  FileUpload.tsx  ManualIntakeForm.tsx  NewDashboard.tsx  ProcessingStatus.tsx  ProfileGenerationWizard.tsx  QuickEmailInput.tsx  ResultsTable.tsx  SmartIntakeResults.tsx  VehicleMatching.tsx  VehicleSearch.tsx
ui/src/lib/: api.ts
(+1 files in other folders)
