[tool.poetry]
name = "mincaai"
version = "0.1.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.5.0"
mypy = "^1.10"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.0"
alembic = "^1.16.5"

[tool.poetry.plugins]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"